fixup! Add more layers to the model - runs but does not improve accuracy
Tidy up imports

--- a/wikiart.ipynb
+++ b/wikiart.ipynb
@@ -9,6 +9,9 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "import json\n",
+    "import tqdm\n",
+    "import argparse\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -16,14 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "import torchvision.transforms.functional as F\n",
     "from torch.optim import Adam\n",
-    "import tqdm\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision.io import read_image\n",
-    "import torchvision.transforms.functional as F\n",
-    "from torch.optim import Adam\n",
-    "import torcheval.metrics as metrics\n",
-    "import json\n",
-    "import argparse"
+    "import torcheval.metrics as metrics"
    ]
   },
   {
@@ -126,9 +123,10 @@
     "    def __init__(self, num_classes=27):\n",
     "        super(WikiArtModel, self).__init__()\n",
     "        self.conv2d_1 = nn.Conv2d(3, 32, kernel_size=4, padding=2)  # Output: (32, 416, 416)\n",
-    "        self.maxpool2d_1 = nn.MaxPool2d(kernel_size=2, padding=1) \n",
-    "        self.conv2d_2 = nn.Conv2d(32, 64, kernel_size=4, padding=2) \n",
-    "        self.maxpool2d_2 = nn.MaxPool2d(kernel_size=2, padding=1)   \n",
+    "        self.maxpool2d_1 = nn.MaxPool2d(kernel_size=2, padding=1)   # Output: (32, 209, 209)\n",
+    "        \n",
+    "        self.conv2d_2 = nn.Conv2d(32, 64, kernel_size=4, padding=2) # Output: (64, 209, 209)\n",
+    "        self.maxpool2d_2 = nn.MaxPool2d(kernel_size=2, padding=1)   # Output: (64, 106, 106) (rounded up from 105.5)\n",
     "\n",
     "        self.flatten = nn.Flatten()\n",
     "        self.batchnorm1d = nn.BatchNorm1d(64 * 106 * 106)\n",
