--- a/wikiart.ipynb
+++ b/wikiart.ipynb
@@ -33,6 +33,7 @@
     "args = {\n",
     "    'modelfile':'wikiart.pth',\n",
     "    'trainingdir':'/home/guserbto@GU.GU.SE/wikiart/train',\n",
+    "    'validationdir': '/home/guserbto@GU.GU.SE/wikiart/valid',\n",
     "    'testingdir': '/home/guserbto@GU.GU.SE/wikiart/test',\n",
     "    'device': 'cuda:3',\n",
     "    'epochs':10,\n",
@@ -42,6 +43,7 @@
     "\n",
     "modelfile = args['modelfile']\n",
     "trainingdir = args['trainingdir']\n",
+    "validationdir = args['validationdir']\n",
     "testingdir = args['testingdir']\n",
     "device = args['device']\n",
     "epochs = args['epochs']\n",
@@ -167,21 +169,25 @@
     "\n",
     "\n",
     "traindataset = WikiArtDataset(trainingdir, device)\n",
+    "valdataset = WikiArtDataset(validationdir, device)\n",
     "\n",
     "the_image, the_label = traindataset[5]\n",
     "print(the_image, the_image.size())\n",
     "\n",
     "def train(epochs=3, batch_size=32, modelfile=None, device=\"cpu\"):\n",
-    "    loader = DataLoader(traindataset, batch_size=batch_size, shuffle=True)\n",
+    "    train_loader = DataLoader(traindataset, batch_size=batch_size, shuffle=True)\n",
+    "    val_loader = DataLoader(valdataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "    model = WikiArtModel().to(device)\n",
-    "    optimizer = Adam(model.parameters(), lr=0.01)\n",
+    "    optimizer = Adam(model.parameters(), lr=0.001)\n",
     "    criterion = nn.NLLLoss().to(device)\n",
+    "\n",
+    "    best_val_loss = float('inf')\n",
     "    \n",
     "    for epoch in range(epochs):\n",
     "        print(\"Starting epoch {}\".format(epoch))\n",
     "        accumulate_loss = 0\n",
-    "        for batch_id, batch in enumerate(tqdm.tqdm(loader)):\n",
+    "        for batch_id, batch in enumerate(tqdm.tqdm(train_loader)):\n",
     "            X, y = batch\n",
     "            y = y.to(device)\n",
     "            optimizer.zero_grad()\n",
@@ -193,8 +199,26 @@
     "\n",
     "        print(\"In epoch {}, loss = {}\".format(epoch, accumulate_loss))\n",
     "\n",
-    "    if modelfile:\n",
-    "        torch.save(model.state_dict(), modelfile)\n",
+    "    # Validation phase\n",
+    "        model.eval()\n",
+    "        val_loss = 0\n",
+    "        with torch.no_grad():\n",
+    "            for batch_id, batch in enumerate(tqdm.tqdm(val_loader)):\n",
+    "                X, y = batch\n",
+    "                y = y.to(device)\n",
+    "                output = model(X)\n",
+    "                loss = criterion(output, y)\n",
+    "                val_loss += loss.item()\n",
+    "        print(\"In epoch {}, validation loss = {}\".format(epoch, val_loss))\n",
+    "\n",
+    "        # Save the model if validation loss decreases\n",
+    "        if val_loss < best_val_loss:\n",
+    "            best_val_loss = val_loss\n",
+    "            if modelfile:\n",
+    "                torch.save(model.state_dict(), modelfile)\n",
+    "\n",
+    "    ##if modelfile:\n",
+    "      ##  torch.save(model.state_dict(), modelfile)\n",
     "\n",
     "    return model"
    ]
