--- a/wikiart_with_val.ipynb
+++ b/wikiart_with_val.ipynb
@@ -69,6 +69,7 @@
     "        if not self.loaded:\n",
     "            self.image = read_image(os.path.join(self.imgdir, self.label, self.filename)).float()\n",
     "            self.loaded = True\n",
+    "            self.image /= 255.0\n",
     "\n",
     "        return self.image"
    ]
