Part 1 with tons of related and unrelated revisions in other files

--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -50,7 +50,18 @@
     "testingdir = args['testingdir']\n",
     "device = args['device']\n",
     "epochs = args['epochs']\n",
-    "batch_size = args['batch_size']"
+    "batch_size = args['batch_size']\n",
+    "\n",
+    "\n",
+    "seed = 42\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)\n",
+    "torch.cuda.manual_seed_all(seed)\n",
+    "np.random.seed(seed)\n",
+    "random.seed(seed)\n",
+    "\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "torch.backends.cudnn.benchmark = False"
    ]
   },
   {
