--- a/part2_autoencoder.ipynb
+++ b/part2_autoencoder.ipynb
@@ -309,10 +309,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ef3184a1-2bad-4c31-894a-48682cce9af5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'WikiArtDataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Evaluate model on a given filename\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m testdataset \u001b[38;5;241m=\u001b[39m \u001b[43mWikiArtDataset\u001b[49m(testingdir, device)\n\u001b[1;32m      5\u001b[0m filename \u001b[38;5;241m=\u001b[39m testdataset\u001b[38;5;241m.\u001b[39mget_filename(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m      7\u001b[0m model \u001b[38;5;241m=\u001b[39m AutoEncoder()\u001b[38;5;241m.\u001b[39mto(device)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'WikiArtDataset' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate model on a given filename\n",
     "\n",
